# ltc-benefit-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  PRODUCT.md  PROGRESS.md  README.md  app.py  pyproject.toml  requirements.lock.txt  requirements.txt
.claude/skills/audit-rule-snapshot/: SKILL.md
.claude/skills/prepare-f1-ollama/: SKILL.md
.claude/skills/resume-context/: SKILL.md
.claude/skills/review-phase/: SKILL.md
.claude/skills/run-diagnostic-eval/: SKILL.md
.claude/skills/update-progress/: SKILL.md
.claude/skills/verify-external-api/: SKILL.md
.github/workflows/: ci.yml  rule-audit.yml
deploy/ollama/: f1-tools.Modelfile.template  gemma3-tools.Modelfile
docs/: hosting.md  local-models.md  release-checklist.md
docs/examples/: 01-age65-known-cms.md  02-indigenous-second-category.md  03-dementia-version-unknown-cms.md
docs/research/: completion-audit.md  rule-source-manifest.md  rules-audit.md
eval/: scenarios.json
eval/results/: local-models-v3.json
scripts/: estimate_cloud_cost.py  export_public_evaluation.py  merge_evaluation_artifacts.py  prepare_f1_ollama.py  ui_fixture_app.py  ui_smoke.py
src/ltc_benefit_agent/: __init__.py
src/ltc_benefit_agent/agent/: __init__.py  cli.py  config.py  factory.py  intake.py  privacy.py  reports.py  service.py  toolset.py  workflow.py
src/ltc_benefit_agent/audit/: __init__.py  checker.py  cli.py  consistency.py  (+5 more)
tests/: test_agent_phase2.py  test_copay.py  test_eligibility.py  test_evaluation.py  test_faq_search.py  test_rule_audit.py  test_rules_and_architecture.py  test_ui.py
(+30 files in other folders)
