[project]
name = "ltc-benefit-agent"
version = "0.1.0"
description = "Auditable deterministic eligibility and copay tools for Taiwan long-term care"
readme = "README.md"
authors = [{ name = "ltc-benefit-agent contributors" }]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "gradio>=6,<7",
    "langchain>=1.3.2,<2",
    "langchain-google-genai>=4.3.0",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.11.10,<2.12.5",
    "python-dotenv>=1.2.2",
]

[project.scripts]
ltc-benefit-agent = "ltc_benefit_agent.agent.cli:main"
ltc-benefit-ui = "ltc_benefit_agent.ui.app:main"
ltc-rule-audit = "ltc_benefit_agent.audit.cli:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
audit = [
    "pypdf>=6.14.2",
]
dev = [
    "playwright>=1.58,<2",
    "pytest>=9.1.1",
]
model = [
    "huggingface-hub>=1.24,<2",
]

[tool.pytest.ini_options]
addopts = "--strict-markers -ra"
testpaths = ["tests"]
